--- a/Wavelet CppWForms/Wavelet CppWForms.vcxproj.filters
+++ b/Wavelet CppWForms/Wavelet CppWForms.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="CTests.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="frmExport.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -101,6 +104,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="CTests.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="frmExport.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
